<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/layout_1">

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="2017"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/color_red" />
        <TextView
            android:id="@+id/tvToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/hom_nay"
            android:textColor="@color/color_red"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="17dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layout_1"
        android:id="@+id/layout_2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/chu_nhat"
            android:textColor="@color/color_gray"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/thu_2"
            android:textColor="@color/color_blank"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/thu_3"
            android:textColor="@color/color_blank"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/thu_4"
            android:textColor="@color/color_blank"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/thu_5"
            android:textColor="@color/color_blank"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/thu_6"
            android:textColor="@color/color_blank"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/thu_7"
            android:textColor="@color/color_gray"
            android:textSize="17dp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_gray2"
        android:layout_below="@id/layout_2"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="2dp"
        android:layout_below="@id/view"/>

    <LinearLayout
        android:id="@+id/viewLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="-100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:textColor="@color/color_blank" />

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/color_red" />

    </LinearLayout>
</RelativeLayout>